# MatrixWorker

./: CMakeLists.txt  README.md
devbin/: main.cpp
include/MatrixWorker/: MatrixWorkerLib.h
src/: MatrixWorkerImpl.cpp  MatrixWorkerImpl.h
tests/: tests.cpp
